# COR-SAT

./: .gitignore  README.md  pyproject.toml
agents/: agent_loop.py  cli.py
agents/candidates/candidate-001/: mission.py
agents/prompts/: Modelfile  mission_builder.md  mission_generator.txt
agents/references/: mission_contract.md  optical_flow_example.md  sdk_contract.md
agents/tools/: tool_schemas.py  tools.py
hal/: Cargo.toml
hal/src/: camera.rs  capabilities.rs  health.rs  main.rs  system.rs
missions/periodic-camera/: config.json  manifest.json  mission.py
runner/: cli.py  validator.py
runner/schemas/: mission-manifest.schema.json
runtime/periodic-camera/: heartbeat.json  state.json
schematics/sat_ir_link/: 3d-print-board.step  board-to-print.step  board-to-printv2.step  sat_ir_link.kicad_pcb  sat_ir_link.kicad_prl  sat_ir_link.kicad_pro  sat_ir_link.kicad_sch  v23d-print-board.step
sdk/: test_sat_sdk.py
sdk/sat_sdk/: __init__.py  camera.py  capabilites.py  client.py  exceptions.py  models.py  system.py
