[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-sdk"
version = "0.1.0"
description = "Python SDK for the Raspberry Pi satellite HAL"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.23"
]

[tool.setuptools]
package-dir = {"" = "sdk"}

[tool.setuptools.packages.find]
where = ["sdk"]
